--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "swagger-ui-express": "^4.4.0"
   }
 }
