--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@swc/core": "^1.2.186",
     "@swc/jest": "^0.2.21",
     "@types/bcryptjs": "^2.4.2",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -37,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
