--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --exit-child --ignore-watch node_modules src/index.ts",
     "build": "tsc",
+    "start": "node build/src/index.js",
     "test": "jest"
   },
   "keywords": [],
@@ -28,10 +29,11 @@
     "jest": "^28.1.0",
     "prisma": "^3.14.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4",
-    "uuid": "^8.3.2"
+    "typescript": "^4.6.4"
+
   },
   "dependencies": {
+    "uuid": "^8.3.2",
     "@jest-mock/express": "^1.4.5",
     "@prisma/client": "^3.14.0",
     "@types/multer": "^1.4.7",
