--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,3 +1,4 @@
+# image
 FROM node:16-alpine as ts-compiler
 WORKDIR /usr/app
 COPY package*.json ./
@@ -6,13 +7,17 @@ RUN npm install
 COPY . ./
 RUN npm run build
 
+
+# production
 FROM node:16-alpine as ts-remover
 WORKDIR /usr/app
 COPY --from=ts-compiler /usr/app/package*.json ./
 COPY --from=ts-compiler /usr/app/prisma ./
-COPY --from=ts-compiler /usr/app/.env ./
+COPY --from=ts-compiler /usr/app/.env.production ./
 COPY --from=ts-compiler /usr/app/build ./build
 
+RUN mv .env.production .env
 RUN npm install --only=production
-EXPOSE 3000
+EXPOSE 3001
+
 CMD  ["npm", "run", "start"]
