--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -12,7 +12,7 @@ server {
 server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name  devgui.info
+        server_name  devgui.info www.devgui.info
         server_tokens off;
         ssl_certificate /etc/letsencrypt/live/devgui.info/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/devgui.info/privkey.pem;
