--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -12,10 +12,10 @@ server {
 server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name  api.devgui.info www.api.devgui.info
+        server_name devgui.info www.devgui.info
         server_tokens off;
-        ssl_certificate /etc/letsencrypt/live/api.devgui.info/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.devgui.info/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/devgui.info/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/devgui.info/privkey.pem;
         ssl_buffer_size 8k;
         ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
         ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
