fix: depends_on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - certbot-var:/var/lib/letsencrypt
       - dhparam:/etc/ssl/certs
     depends_on:
-      - app_production
+      - Nodejs
     networks:
       - app-network
   certbot:
