--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,12 @@
 version: '3'
-
 services:
-  # mysql:
-  #   image: mysql:8
-  #   ports:
-  #     - 3306:3306
-  #   volumes:
-  #     - ~/apps/mysql:/var/lib/mysql
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=S3cret
-  #     - MYSQL_PASSWORD=S3cret
-  #     - MYSQL_USER=docker_user
-  #     - MYSQL_DATABASE=solid_api
-  # app_dev:  
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile-dev
-  #   container_name: solidapi_dev
-  #   ports:
-  #     - 3001:3001
-  #   network_mode: host
-
-  Nodejs:  
+  Nodejs:
     build:
       context: .
       dockerfile: Dockerfile-prod
     image: Nodejs
     container_name: Nodejs
     restart: unless-stopped
-    ports:
-      - 3000:3000
     networks:
       - app-network
   webserver:
@@ -58,8 +35,8 @@ services:
       - web-root:/var/www/html
     depends_on:
       - webserver
-    command: certonly --webroot --webroot-path=/var/www/html --email guibarrosodeoliveira5@gmail.com --agree-tos --no-eff-email --staging -d devgui.info  -d www.devgui.info
-    #command: certonly --webroot --webroot-path=/var/www/html --email guibarrosodeoliveira5@gmail.com --agree-tos --no-eff-email --force-renewal -d devgui.info  -d www.devgui.info
+    command: certonly --webroot --webroot-path=/var/www/html --email my@email.com --agree-tos --no-eff-email --staging -d Nodejs.devopslee.com  -d www.Nodejs.devopslee.com
+    #command: certonly --webroot --webroot-path=/var/www/html --email my@email.com --agree-tos --no-eff-email --force-renewal -d Nodejs.devopslee.com  -d www.Nodejs.devopslee.com
 volumes:
   certbot-etc:
   certbot-var:
@@ -78,5 +55,3 @@ volumes:
 networks:
   app-network:
     driver: bridge
-
- 
