--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -12,7 +12,7 @@ server {
 server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name  devgui.info www.devgui.info
+        server_name devgui.info www.devgui.info;
         server_tokens off;
         ssl_certificate /etc/letsencrypt/live/devgui.info/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/devgui.info/privkey.pem;
@@ -27,10 +27,10 @@ server {
         ssl_stapling_verify on;
         resolver 8.8.8.8;
         location / {
-                try_files $uri @Nodejs;
+                try_files $uri @nodejs;
         }
-        location @Nodejs {
-                proxy_pass http://Nodejs:3000;
+        location @nodejs {
+                proxy_pass http://nodejs:3000;
                 add_header X-Frame-Options "SAMEORIGIN" always;
                 add_header X-XSS-Protection "1; mode=block" always;
                 add_header X-Content-Type-Options "nosniff" always;
