--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -6,13 +6,12 @@ WORKDIR /usr/dev
 
 # Copiando nosso package.json para o docker 
 COPY package.json ./
-
+COPY .env ./
 # Executa um comando
 RUN npm install
 
 COPY . .
-EXPOSE 3000
-RUN npx prisma generate
+EXPOSE 3001
 # Roda comando sendo os espacos separados por array
 CMD ["npm", "run", "dev"]
 
