--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --exit-child --ignore-watch node_modules src/index.ts",
+    "dev": "export NODE_ENV=development && ts-node-dev --transpile-only --exit-child --ignore-watch node_modules src/index.ts",
     "build": "tsc",
     "startDocker:prod": "bash scripts/docker/startProdDocker.sh",
     "startDocker:dev": "bash scripts/docker/startDevDocker.sh",
@@ -18,6 +18,7 @@
     "@swc/core": "^1.2.186",
     "@swc/jest": "^0.2.21",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
@@ -32,14 +33,13 @@
     "prisma": "^3.14.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
-
   },
   "dependencies": {
-    "uuid": "^8.3.2",
     "@jest-mock/express": "^1.4.5",
     "@prisma/client": "^3.14.0",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "uuid": "^8.3.2"
   }
 }
