--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
