--- a/package.json
+++ b/package.json
@@ -1,55 +1,59 @@
 {
-  "name": "solid_api",
+  "name": "aws-node-express-api-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "dev": "export NODE_ENV=development && ts-node-dev --transpile-only --exit-child --ignore-watch node_modules src/index.ts",
+    "dev": "sls offline --stage dev development",
+    "deploy:dev": "sls deploy --stage local",
+    "deploy:production": "sls deploy --stage prod",
     "build": "tsc",
-    "startDocker:prod": "bash scripts/docker/startProdDocker.sh",
-    "startDocker:dev": "bash scripts/docker/startDevDocker.sh",
-    "start": "export NODE_ENV=production && node build/src/index.js",
     "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.2.186",
-    "@swc/jest": "^0.2.21",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/ejs": "^3.1.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.1",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.35",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
-    "jest": "^28.1.0",
-    "prisma": "^3.14.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
   },
   "dependencies": {
     "@jest-mock/express": "^1.4.5",
     "@prisma/client": "^3.14.0",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-rate-limit": "^6.4.0",
-    "joi": "^17.6.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
+    "serverless-http": "^2.7.0",
     "swagger-ui-express": "^4.4.0",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^6.4.0",
+    "joi": "^17.6.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4",
+    "@swc/core": "^1.2.182",
+    "@swc/jest": "^0.2.21",
+    "@types/aws-lambda": "^8.10.72",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.27",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "esbuild": "^0.14.36",
+    "eslint": "^8.14.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.0",
+    "prisma": "^3.14.0",
+    "serverless-dotenv-plugin": "^4.0.0",
+    "serverless-esbuild": "^1.26.2",
+    "serverless-offline": "^8.5.0",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^10.7.0"
   }
 }
