--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "express-rate-limit": "^6.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mssql": "^8.1.2",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
+    "sql-template-strings": "^2.2.2",
     "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
   }
