--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
     "prisma": "^3.14.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
